@slidy/core - snap: undefined (for EricRovell👍🏻)

--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -74,7 +74,7 @@
                     </label>
                     <label title="align">
                         <select value="center" name="snap" onchange="changeValue()">
-                            <option value="">unset</option>
+                            <option value="undefined">unset</option>
                             <option value="start">← start</option>
                             <option value="center">center</option>
                             <option value="end">end →</option>
