--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -179,7 +179,7 @@
                     scrolling(e.detail.position);
                 });
                 node.addEventListener('resize', (e) => {
-                    // console.log(e)
+                    console.log(e)
                 });
                 node.addEventListener('update', (e) => {
                     // console.log(e)
@@ -195,7 +195,6 @@
 
                 function indexing(x) {
                     options.index = x;
-                    const cix = Math.floor(node.children.length / 2);
 
                     Array.from(node.children).forEach((n, i) =>
                         +n.id === x ? n.classList.add('active') : n.classList.remove('active')
@@ -248,6 +247,7 @@
             // }
 
             async function getPhotos(node, page, limit) {
+                slidy?.destroy();
                 node.style.transform = ''
                 node.innerHTML = `<li style="display: grid; place-items: center">Loading... 🚀</li>`;
 
@@ -273,7 +273,6 @@
                         }
                     })
                     .then(() => {
-                        slidy?.destroy();
                         slidy = Slidy.slidy(node, options);
                     })
                     .catch((error) => {
