--- a/www/src/app.html
+++ b/www/src/app.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="description" content="" />
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%svelte.head%
-	</head>
-	<body>
-		<div>%svelte.body%</div>
-	</body>
+
+    <head>
+        <meta charset="utf-8" />
+        <meta name="description" content="" />
+        <link rel="icon" href="%svelte.assets%/favicon.png" />
+        <link rel="stylesheet" href="%svelte.assets%/app.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        %svelte.head%
+    </head>
+
+    <body>
+        %svelte.body%
+    </body>
+
 </html>
