--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -42,7 +42,7 @@
 
             <nav>
                 <button id="prev" onclick="slidy.to(options.index - 1)">←</button>
-                <button id="reload" onclick="getPhotos(node, randomQ(1, 69), limit)">
+                <button id="reload" onclick="getPhotos(node, randomQ(1, 69), options.length)">
                     <i class="icon icon-refresh"></i>
                 </button>
                 <button id="next" onclick="slidy.to(options.index + 1)">→</button>
@@ -52,8 +52,9 @@
 
             <form>
                 <fieldset>
-                    <label title="limit">
-                        <input onchange="setLimit()" name="limit" type="number" size="1" step="1" min="1" max="100" />
+                    <label title="length">
+                        <input onchange="changeValue()" name="length" type="number" size="1" step="1" min="1"
+                            max="50" />
                     </label>
                     <label title="width">
                         <input onchange="setVar(main, this.name, this.value)" name="width" size="5" />
@@ -133,15 +134,14 @@
             let position = 0,
                 slidy = null,
                 dark = window.matchMedia('(prefers-color-scheme: dark)').matches,
-                page = randomQ(1, 69),
-                limit = 9;
+                page = randomQ(1, 69);
 
             let options = {
-                index: 4,
-                length: limit,
+                index: 1,
+                length: 3,
                 snap: 'center',
                 loop: true,
-                clamp: false,
+                clamp: true,
                 gravity: 1.2,
                 duration: 375,
                 vertical: false,
@@ -153,14 +153,14 @@
                 stats = document.querySelector('#stats'),
                 buttons = document.querySelectorAll('button'),
                 inputs = document.querySelectorAll('input'),
-                select = document.querySelector('select')
+                select = document.querySelector('select');
 
             window.onload = () => {
-                getPhotos(node, page, limit);
+                getPhotos(node, page, options.length);
 
                 node.addEventListener('mount', (e) => {
                     console.log(e);
-                    options = e.detail.options
+                    options = e.detail.options;
 
                     for (const button of buttons) {
                         if (options[button.id] || (button.id === 'dark' && dark)) button.classList.add('active');
@@ -170,16 +170,15 @@
                         else if (input.name === 'width') input.value = getVar(main, '--width');
                         else if (input.name === 'height') input.value = getVar(main, '--height');
                         else if (input.name === 'gap') input.value = getVar(main, '--gap');
-                        else if (input.name === 'limit') input.value = limit;
                     }
-                    select.value = options.snap
+                    select.value = options.snap;
                 });
                 node.addEventListener('move', (e) => {
                     indexing(e.detail.index);
                     scrolling(e.detail.position);
                 });
                 node.addEventListener('resize', (e) => {
-                    console.log(e)
+                    console.log(e);
                 });
                 node.addEventListener('update', (e) => {
                     // console.log(e)
@@ -225,9 +224,10 @@
             }
 
             function changeValue() {
-                const value = isNum(event.target.value) ? +event.target.value : event.target.value
+                const value = isNum(event.target.value) ? +event.target.value : event.target.value;
                 slidy.update({ [event.target.name]: value });
                 options[event.target.name] = value;
+                if (event.target.name === 'length') getPhotos(node, page, options.length);
             }
             function getVar(node, name) {
                 return getComputedStyle(node).getPropertyValue(name);
@@ -236,10 +236,10 @@
                 return node.style.setProperty(`--${name}`, value);
             }
 
-            function setLimit() {
-                options.length = limit = event.target.value;
-                getPhotos(node, page, limit);
-            }
+            // function setLimit() {
+            //     options.length = limit = event.target.value;
+            //     getPhotos(node, page, limit);
+            // }
             // node.addEventListener('click', (event) => alert(event.target.tagName), true)
             // function onClick() {
             //     node.style.pointerEvents = 'auto'
@@ -248,7 +248,7 @@
 
             async function getPhotos(node, page, limit) {
                 slidy?.destroy();
-                node.style.transform = ''
+                node.style.transform = '';
                 node.innerHTML = `<li style="display: grid; place-items: center">Loading... 🚀</li>`;
 
                 fetch(`https://picsum.photos/v2/list?limit=${limit}&page=${page}`)
@@ -268,7 +268,7 @@
                                 .map((p, i) => `<button onclick="slidy.to(${i})">${i}</button>`)
                                 .join('');
                         } else {
-                            node.style.transform = ''
+                            node.style.transform = '';
                             node.innerHTML = `<li style="display: grid; place-items: center">Slidy haven't items 🤷🏻‍♂️</li>`;
                         }
                     })
