@slidy/wc -  cleanup

--- a/packages/wc/dev/index.html
+++ b/packages/wc/dev/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="dev.css" />
         <link rel="stylesheet" href="slidy.css" />
 
-        <title>Slidy 3.1.0 - NativeJS</title>
+        <title>Slidy 3.1.0 - WebComponent</title>
 
         <script type="module" src="slidy.js"></script>
     </head>
