--- a/packages/wc/dev/index.html
+++ b/packages/wc/dev/index.html
@@ -202,7 +202,7 @@
 
             function scrolling(p) {
                 position = p;
-                stats.innerHTML = `[<b>${options.index}</b>] / <b>${Math.trunc(position)}</b>px`;
+                stats.innerHTML = `[<b>${options.index}</b>] / <b>${Math.trunc(position)}</b>`;
             }
 
             function indexing(x) {
