--- a/packages/wc/dev/index.html
+++ b/packages/wc/dev/index.html
@@ -19,7 +19,7 @@
 
         <title>Slidy 3.1.0 - WebComponent</title>
 
-        <script type="module" src="slidy.js"></script>
+        <script type="module" src="dev.js"></script>
     </head>
 
     <body>
@@ -147,7 +147,7 @@
 
             let options = {
                 index: 2,
-                length: 5,
+                // length: 5,
                 snap: '',
                 loop: false,
                 clamp: false,
