--- a/packages/vue/dev/public/index.html
+++ b/packages/vue/dev/public/index.html
@@ -8,10 +8,9 @@
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="0" />
         <link rel="icon" type="image/png" href="favicon.png" />
-        <link rel="stylesheet" href="global.css" />
         <link rel="stylesheet" href="build/bundle.css" />
 
-        <title>Slidy 3.0 - ReactJS</title>
+        <title>Slidy 3.0 - VueJS</title>
 
         <script defer src="build/bundle.js"></script>
     </head>
