--- a/packages/vue/dev/public/index.html
+++ b/packages/vue/dev/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-        <meta http-equiv="Pragma" content="no-cache" />
-        <meta http-equiv="Expires" content="0" />
-        <link rel="icon" type="image/png" href="favicon.png" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+        <meta http-equiv="Pragma" content="no-cache">
+        <meta http-equiv="Expires" content="0">
+        <link rel="icon" type="image/png" href="favicon.png">
         <link rel="stylesheet" href="build/bundle.css" />
 
         <title>Slidy 3.0 - VueJS</title>
@@ -15,6 +15,8 @@
         <script defer src="build/bundle.js"></script>
     </head>
 
-    <body></body>
+    <body>
+
+    </body>
 
 </html>
