--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -163,7 +163,7 @@
 
             let options = {
                 index: 2,
-                length: 5,
+                // length: 5,
                 snap: 'center',
                 loop: true,
                 clamp: false,
