@slid/core - improve docs

--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -19,15 +19,15 @@
         <title>Slidy 3.1.0 - NativeJS</title>
 
         <script defer src="dev.js"></script>
-        <!-- <script type="module">
+        <script type="module">
             import { slidy } from 'https://unpkg.com/@slidy/core/dist/slidy.mjs';
 
             const nod = document.querySelector('#slidy');
-            console.log(slidy(nod, {}))
+            console.log(slidy(nod, {}));
             window.slidy = slidy;
             console.log(dark);
             console.log(window['slidy-logo']); // get Node by id
-        </script> -->
+        </script>
     </head>
 
     <body>
