@slidy/core - docs

--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -23,7 +23,7 @@
             import { slidy } from 'https://unpkg.com/@slidy/core/dist/slidy.mjs';
 
             const nod = document.querySelector('#slidy');
-            console.log(slidy(nod, {}));
+            console.log(slidy);
             window.slidy = slidy;
             console.log(dark);
             console.log(window['slidy-logo']); // get Node by id
